<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mode_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.tourneymanager.ModeSelectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView17"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="normal|italic"
        android:text="Select Mode" />

    <Button
        android:text="Manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp"
        android:id="@+id/manager_button"
        android:layout_alignParentEnd="true"
        android:onClick="startManagerMode" />

    <Button
        android:text="Player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manager_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/player_button"
        android:layout_alignParentEnd="true"
        android:onClick="startPlayerMode" />

</RelativeLayout>
