...
            android:text="Manage Players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createButton"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:id="@+id/managePlayersButton"
            android:layout_alignParentEnd="true"
            android:onClick="ManagePlayersLauncher" />

        <Button
            android:text="View Player Totals"
            android:layout_width="match_parent"
...
